[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
gpu = { path = "../gpu" }
math = { path = "../math" }
common = { path = "../common" }

profiling = { version = "*", features = ["profile-with-tracy"] }
noise = "*"
winit = "*"
raw-window-handle = "0.5.0"

