[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu = { path = "../gpu" }
net = { path = "../net" }
math = { path = "../math" }
common = { path = "../common" }

rand = "*"
profiling = { version = "*" }
#tracy-client = "*"
noise = "*"
winit = "*"
raw-window-handle = "0.5.0"

