[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_Networking_WinSock"] }

[target.'cfg(linux)'.dependencies]
libc = "0.2.138"
